--- a/_modules/iceprod/server.html
+++ b/_modules/iceprod/server.html
@@ -132,6 +132,7 @@
 <span class="kn">import</span> <span class="nn">sys</span>
 <span class="kn">import</span> <span class="nn">logging</span>
 <span class="kn">from</span> <span class="nn">pkgutil</span> <span class="k">import</span> <span class="n">get_loader</span>
+<span class="kn">import</span> <span class="nn">importlib</span>
 
 <span class="k">try</span><span class="p">:</span>
     <span class="c"># do a monkey patching of tornado json library</span>
@@ -164,12 +165,11 @@
             <span class="n">ret</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">package_name</span><span class="o">+</span><span class="s">&#39;.&#39;</span><span class="o">+</span><span class="n">tmp</span><span class="p">)</span>
     <span class="k">return</span> <span class="n">ret</span></div>
 
-<div class="viewcode-block" id="run_module"><a class="viewcode-back" href="../../server/init.html#iceprod.server.run_module">[docs]</a><span class="k">def</span> <span class="nf">run_module</span><span class="p">(</span><span class="n">name</span><span class="p">,</span><span class="n">args</span><span class="p">):</span>
+<div class="viewcode-block" id="run_module"><a class="viewcode-back" href="../../server/init.html#iceprod.server.run_module">[docs]</a><span class="k">def</span> <span class="nf">run_module</span><span class="p">(</span><span class="n">name</span><span class="p">,</span><span class="o">*</span><span class="n">args</span><span class="p">,</span><span class="o">**</span><span class="n">kwargs</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;Import and start the module&quot;&quot;&quot;</span>
     <span class="n">class_name</span> <span class="o">=</span> <span class="n">name</span><span class="o">.</span><span class="n">rsplit</span><span class="p">(</span><span class="s">&#39;.&#39;</span><span class="p">,</span><span class="mi">1</span><span class="p">)[</span><span class="mi">1</span><span class="p">]</span>
-    <span class="c">#print &quot;package = &quot;,name,&quot; and class = &quot;,class_name</span>
-    <span class="n">x</span> <span class="o">=</span> <span class="nb">__import__</span><span class="p">(</span><span class="n">name</span><span class="p">,</span><span class="nb">globals</span><span class="p">(),</span><span class="nb">locals</span><span class="p">(),[</span><span class="n">class_name</span><span class="p">])</span>
-    <span class="k">return</span> <span class="p">(</span><span class="nb">getattr</span><span class="p">(</span><span class="n">x</span><span class="p">,</span><span class="n">class_name</span><span class="p">))(</span><span class="n">args</span><span class="p">)</span></div>
+    <span class="n">x</span> <span class="o">=</span> <span class="n">importlib</span><span class="o">.</span><span class="n">import_module</span><span class="p">(</span><span class="n">name</span><span class="p">)</span>
+    <span class="k">return</span> <span class="p">(</span><span class="nb">getattr</span><span class="p">(</span><span class="n">x</span><span class="p">,</span><span class="n">class_name</span><span class="p">))(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span><span class="o">**</span><span class="n">kwargs</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="GlobalID"><a class="viewcode-back" href="../../server/init.html#iceprod.server.GlobalID">[docs]</a><span class="k">class</span> <span class="nc">GlobalID</span><span class="p">(</span><span class="nb">object</span><span class="p">):</span>
