don't overwrite task_stats on completion. record hostname and time_used on completion. get dataset task completions working. for #110

--- a/iceprod/server/data/www_templates/dataset_detail.html
+++ b/iceprod/server/data/www_templates/dataset_detail.html
@@ -48,14 +48,18 @@
             <th># Completions</th>
             <th>Avg</th>
             <th><sup>max</sup>/<sub>min</sub></th>
-            <th>Hours</th>
             <th>Efficiency</th>
         </tr>
         {% for t in task_info %}
         <tr>
-            {% for d in t %}
-            <td>{{ d }}</td>
-            {% end %}
+            <td>{{ task_info[t]['task_name'] }}</td>
+            <td>{{ task_info[t]['task_type'] }}</td>
+            <td>{{ task_info[t]['num_queued'] }}</td>
+            <td>{{ task_info[t]['num_running'] }}</td>
+            <td>{{ task_info[t]['num_completions'] }}</td>
+            <td>{{ task_info[t]['avg_runtime'] }}</td>
+            <td><sup>{{ task_info[t]['max_runtime'] }}</sup>/<sub>{{ task_info[t]['min_runtime'] }}</sub></td>
+            <td>{{ task_info[t]['efficiency'] }}</td>
         </tr>
         {% end %}
     </table>
